tests/baselines/reference/deeplyDependentLargeArrayMutation2(strict=true).errors.txt
foo.js(8,11): error TS7034: Variable 'arr' implicitly has type 'any[]' in some locations where its type cannot be determined.
foo.js(9,16): error TS7005: Variable 'arr' implicitly has an 'any[]' type.


==== foo.js (2 errors) ====
    // Looking at this test and thinking "that's silly, nobody would write code like that" and thinking it's OK to break this test?
    // You'd be wrong - https://raw.githubusercontent.com/archilogic-com/3dio-js/master/build/3dio.js and plenty of other codebases
    // have js code exactly like this! This pattern (even at this size!) with a few more embellishments is a common way to encode
    // polygons or verticies into a buffer from a formulaic object definition! So while this is a lot more regular than a real piece
    // of code, this is still representative of a common pattern.
    function build() {
        let i = 0;
        const arr = [];
              ~~~
!!! error TS7034: Variable 'arr' implicitly has type 'any[]' in some locations where its type cannot be determined.
        arr[i++] = arr[i] + 1;
                   ~~~
!!! error TS7005: Variable 'arr' implicitly has an 'any[]' type.
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        arr[i++] = arr[i] + 1;
        return arr;
    }
    
    const a = build();